--- a/arch/arm/configs/d800_defconfig
+++ b/arch/arm/configs/d800_defconfig
@@ -688,6 +688,7 @@ CONFIG_F2FS_FS_XATTR=y
 # CONFIG_F2FS_FS_POSIX_ACL is not set
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
+CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_CIFS=y
 CONFIG_NLS_CODEPAGE_437=y
@@ -706,6 +707,8 @@ CONFIG_ENABLE_DEFAULT_TRACERS=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_KEYS=y
+CONFIG_ENCRYPTED_KEYS=y
+CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
@@ -716,6 +719,11 @@ CONFIG_CRYPTO_DEV_KFIPS=y
 CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
+CONFIG_CRYPTO_SEQIV=y
+CONFIG_CRYPTO_CBC=y
+CONFIG_CRYPTO_CTR=y
+CONFIG_CRYPTO_CTS=y
+CONFIG_CRYPTO_ECB=y
 
 # For SELinux jaejyn.shin@lge.com
 CONFIG_SECURITY=y
