--- a/arch/arm/configs/cyanogenmod_vs980_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs980_defconfig
@@ -2234,6 +2234,10 @@ CONFIG_THERMAL_TSENS8974=y
 CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
+CONFIG_BRICKED_THERMAL=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=2265600
+CONFIG_MSM_CPU_FREQ_MIN=300000
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
