--- a/arch/arm/configs/cyanogenmod_lgl22_defconfig
+++ b/arch/arm/configs/cyanogenmod_lgl22_defconfig
@@ -168,6 +168,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -369,14 +370,14 @@ CONFIG_MACH_LGE=y
 CONFIG_MACH_MSM8974_G2=y
 # CONFIG_MACH_MSM8974_G2_KR is not set
 # CONFIG_MACH_MSM8974_G2_LGU is not set
-CONFIG_MACH_MSM8974_G2_ATT=y
+# CONFIG_MACH_MSM8974_G2_ATT is not set
 # CONFIG_MACH_MSM8974_G2_SKT is not set
 # CONFIG_MACH_MSM8974_G2_KT is not set
 # CONFIG_MACH_MSM8974_G2_VZW is not set
 # CONFIG_MACH_MSM8974_G2_SPR is not set
 # CONFIG_MACH_MSM8974_G2_TMO_US is not set
 # CONFIG_MACH_MSM8974_G2_DCM is not set
-# CONFIG_MACH_MSM8974_G2_KDDI is not set
+CONFIG_MACH_MSM8974_G2_KDDI=y
 # CONFIG_MACH_MSM8974_G2_OPEN_COM is not set
 # CONFIG_MACH_MSM8974_G2_OPT_AU is not set
 # CONFIG_MACH_MSM8974_G2_TEL_AU is not set
@@ -444,7 +445,7 @@ CONFIG_MACH_MSM8974_G2_ATT=y
 # CONFIG_MACH_MSM8974_G3_WIN is not set
 # CONFIG_MACH_MSM8974_DZNY_DCM is not set
 # CONFIG_LGE_SPECIFIC_PATCHES is not set
-CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-att"
+CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-kddi"
 # CONFIG_LGE_HANDLE_PANIC is not set
 CONFIG_LGE_BOOTLOADER_LOG=y
 # CONFIG_LGE_LCD_TUNING is not set
@@ -745,8 +746,8 @@ CONFIG_MEMORY_HOLE_CARVEOUT=y
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ENABLE_DMM is not set
 # CONFIG_DONT_MAP_HOLE_AFTER_MEMBANK0 is not set
-CONFIG_ENABLE_VMALLOC_SAVING=y
-# CONFIG_NO_VM_RECLAIM is not set
+# CONFIG_ENABLE_VMALLOC_SAVING is not set
+CONFIG_NO_VM_RECLAIM=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
@@ -864,8 +865,8 @@ CONFIG_XFRM_SUB_POLICY=y
 CONFIG_XFRM_MIGRATE=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_IPCOMP=y
-CONFIG_NET_KEY=y
-CONFIG_NET_KEY_MIGRATE=y
+# CONFIG_NET_KEY is not set
+# CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -888,9 +889,9 @@ CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_TUNNEL=y
-CONFIG_INET_XFRM_MODE_TRANSPORT=y
-CONFIG_INET_XFRM_MODE_TUNNEL=y
-CONFIG_INET_XFRM_MODE_BEET=y
+# CONFIG_INET_XFRM_MODE_TRANSPORT is not set
+# CONFIG_INET_XFRM_MODE_TUNNEL is not set
+# CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
@@ -961,7 +962,7 @@ CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 # CONFIG_NF_CONNTRACK_SNMP is not set
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_NF_CONNTRACK_SANE=y
-# CONFIG_NF_CONNTRACK_SIP is not set
+CONFIG_NF_CONNTRACK_SIP=y
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NF_CT_NETLINK=y
 # CONFIG_NF_CT_NETLINK_TIMEOUT is not set
@@ -983,7 +984,7 @@ CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 # CONFIG_NETFILTER_XT_TARGET_CT is not set
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
-# CONFIG_NETFILTER_XT_TARGET_HL is not set
+CONFIG_NETFILTER_XT_TARGET_HL=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 # CONFIG_NETFILTER_XT_TARGET_LED is not set
 CONFIG_NETFILTER_XT_TARGET_LOG=y
@@ -994,7 +995,7 @@ CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 # CONFIG_NETFILTER_XT_TARGET_TEE is not set
 CONFIG_NETFILTER_XT_TARGET_TPROXY=y
-CONFIG_NETFILTER_XT_TARGET_TRACE=y
+# CONFIG_NETFILTER_XT_TARGET_TRACE is not set
 # CONFIG_NETFILTER_XT_TARGET_SECMARK is not set
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
@@ -1027,7 +1028,7 @@ CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
 # CONFIG_NETFILTER_XT_MATCH_NFACCT is not set
 # CONFIG_NETFILTER_XT_MATCH_OSF is not set
 # CONFIG_NETFILTER_XT_MATCH_OWNER is not set
-CONFIG_NETFILTER_XT_MATCH_POLICY=y
+# CONFIG_NETFILTER_XT_MATCH_POLICY is not set
 # CONFIG_NETFILTER_XT_MATCH_PHYSDEV is not set
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
@@ -1085,11 +1086,11 @@ CONFIG_NF_NAT_TFTP=y
 CONFIG_NF_NAT_AMANDA=y
 CONFIG_NF_NAT_PPTP=y
 CONFIG_NF_NAT_H323=y
-# CONFIG_NF_NAT_SIP is not set
+CONFIG_NF_NAT_SIP=y
 CONFIG_IP_NF_MANGLE=y
-# CONFIG_IP_NF_TARGET_CLUSTERIP is not set
-# CONFIG_IP_NF_TARGET_ECN is not set
-# CONFIG_IP_NF_TARGET_TTL is not set
+CONFIG_IP_NF_TARGET_CLUSTERIP=y
+CONFIG_IP_NF_TARGET_ECN=y
+CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_IP_NF_RAW=y
 # CONFIG_IP_NF_SECURITY is not set
 CONFIG_IP_NF_ARPTABLES=y
@@ -1101,18 +1102,18 @@ CONFIG_IP_NF_ARP_MANGLE=y
 #
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_CONNTRACK_IPV6=y
-# CONFIG_IP6_NF_QUEUE is not set
+CONFIG_IP6_NF_QUEUE=y
 CONFIG_IP6_NF_IPTABLES=y
-# CONFIG_IP6_NF_MATCH_AH is not set
-# CONFIG_IP6_NF_MATCH_EUI64 is not set
-# CONFIG_IP6_NF_MATCH_FRAG is not set
-# CONFIG_IP6_NF_MATCH_OPTS is not set
-# CONFIG_IP6_NF_MATCH_HL is not set
-# CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
-# CONFIG_IP6_NF_MATCH_MH is not set
-# CONFIG_IP6_NF_MATCH_RPFILTER is not set
-# CONFIG_IP6_NF_MATCH_RT is not set
-# CONFIG_IP6_NF_TARGET_HL is not set
+CONFIG_IP6_NF_MATCH_AH=y
+CONFIG_IP6_NF_MATCH_EUI64=y
+CONFIG_IP6_NF_MATCH_FRAG=y
+CONFIG_IP6_NF_MATCH_OPTS=y
+CONFIG_IP6_NF_MATCH_HL=y
+CONFIG_IP6_NF_MATCH_IPV6HEADER=y
+CONFIG_IP6_NF_MATCH_MH=y
+CONFIG_IP6_NF_MATCH_RPFILTER=y
+CONFIG_IP6_NF_MATCH_RT=y
+CONFIG_IP6_NF_TARGET_HL=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
@@ -1316,9 +1317,10 @@ CONFIG_LGE_NFC_USE_PMIC=y
 # CONFIG_LGE_NFC_HW_NV_AP3X is not set
 # CONFIG_NFC_PN533 is not set
 CONFIG_NFC_QNCI=y
-# CONFIG_LGE_NFC_SONY is not set
+CONFIG_LGE_NFC_SONY=y
+CONFIG_LGE_NFC_SONY_KDDI=y
 # CONFIG_CXD2235AGG_GJ_KDDI is not set
-CONFIG_NFC_BCM2079X=y
+# CONFIG_NFC_BCM2079X is not set
 # CONFIG_NFC_BCM43341 is not set
 
 #
@@ -1334,8 +1336,7 @@ CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_EXTRA_FIRMWARE="audience-es325-fw.aud"
-CONFIG_EXTRA_FIRMWARE_DIR="firmware"
+CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
@@ -1444,8 +1445,8 @@ CONFIG_TI_DRV2667=y
 CONFIG_LGE_IRRC=y
 CONFIG_EARJACK_DEBUGGER=y
 CONFIG_BU52031NVX=y
-# CONFIG_BU52031NVX_CARKIT is not set
-# CONFIG_LGE_IRDA_KDDI is not set
+CONFIG_BU52031NVX_CARKIT=y
+CONFIG_LGE_IRDA_KDDI=y
 CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
@@ -1900,7 +1901,7 @@ CONFIG_DIAG_OVER_USB=y
 # HSIC/SMUX support for DIAG
 #
 CONFIG_LGE_DIAG_USB_ACCESS_LOCK=y
-# CONFIG_LGE_DIAG_ENABLE_SYSFS is not set
+CONFIG_LGE_DIAG_ENABLE_SYSFS=y
 
 #
 # LGE DM APP Support
@@ -2074,12 +2075,12 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MSM8X60 is not set
 # CONFIG_SMB137B_CHARGER is not set
 # CONFIG_SMB137C_CHARGER is not set
-CONFIG_SMB349_CHARGER=y
+# CONFIG_SMB349_CHARGER is not set
 # CONFIG_SMB350_CHARGER is not set
 # CONFIG_BATTERY_BQ27520 is not set
 # CONFIG_SMB358_CHARGER is not set
 # CONFIG_BATTERY_BQ27541 is not set
-CONFIG_BATTERY_BQ28400=y
+# CONFIG_BATTERY_BQ28400 is not set
 # CONFIG_QPNP_CHARGER is not set
 # CONFIG_LTC4088_CHARGER is not set
 CONFIG_BATTERY_BCL=y
@@ -2106,7 +2107,7 @@ CONFIG_LGE_CURRENTNOW=y
 # CONFIG_CHARGER_UNIFIED_WLC_ALIGNMENT_BQ5102X is not set
 # CONFIG_LGE_PM_LLK_MODE is not set
 # CONFIG_LGE_SMART_CHARGING is not set
-CONFIG_LGE_G2_EMBEDDED_BATT=y
+# CONFIG_LGE_G2_EMBEDDED_BATT is not set
 # CONFIG_VZW_LLK is not set
 CONFIG_LGE_PM_BATTERY_BATT_ADC_G2_BASE=y
 CONFIG_LGE_PM_CHARGING_TEMP_SCENARIO_V1_7=y
@@ -2361,7 +2362,7 @@ CONFIG_IR_LIRC_CODEC=y
 CONFIG_MSMB_CAMERA=y
 # CONFIG_MSMB_CAMERA_DEBUG is not set
 CONFIG_MSM_CAMERA_SENSOR=y
-CONFIG_LG_OIS=y
+# CONFIG_LG_OIS is not set
 # CONFIG_LG_PROXY is not set
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
@@ -2523,7 +2524,53 @@ CONFIG_VIDEO_IR_I2C=y
 CONFIG_V4L_USB_DRIVERS=y
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
-# CONFIG_USB_GSPCA is not set
+CONFIG_USB_GSPCA=y
+# CONFIG_USB_M5602 is not set
+# CONFIG_USB_STV06XX is not set
+# CONFIG_USB_GL860 is not set
+# CONFIG_USB_GSPCA_BENQ is not set
+# CONFIG_USB_GSPCA_CONEX is not set
+# CONFIG_USB_GSPCA_CPIA1 is not set
+# CONFIG_USB_GSPCA_ETOMS is not set
+# CONFIG_USB_GSPCA_FINEPIX is not set
+# CONFIG_USB_GSPCA_JEILINJ is not set
+# CONFIG_USB_GSPCA_JL2005BCD is not set
+# CONFIG_USB_GSPCA_KINECT is not set
+# CONFIG_USB_GSPCA_KONICA is not set
+# CONFIG_USB_GSPCA_MARS is not set
+# CONFIG_USB_GSPCA_MR97310A is not set
+# CONFIG_USB_GSPCA_NW80X is not set
+# CONFIG_USB_GSPCA_OV519 is not set
+# CONFIG_USB_GSPCA_OV534 is not set
+# CONFIG_USB_GSPCA_OV534_9 is not set
+# CONFIG_USB_GSPCA_PAC207 is not set
+# CONFIG_USB_GSPCA_PAC7302 is not set
+# CONFIG_USB_GSPCA_PAC7311 is not set
+# CONFIG_USB_GSPCA_SE401 is not set
+# CONFIG_USB_GSPCA_SN9C2028 is not set
+# CONFIG_USB_GSPCA_SN9C20X is not set
+# CONFIG_USB_GSPCA_SONIXB is not set
+# CONFIG_USB_GSPCA_SONIXJ is not set
+# CONFIG_USB_GSPCA_SPCA500 is not set
+# CONFIG_USB_GSPCA_SPCA501 is not set
+# CONFIG_USB_GSPCA_SPCA505 is not set
+# CONFIG_USB_GSPCA_SPCA506 is not set
+# CONFIG_USB_GSPCA_SPCA508 is not set
+# CONFIG_USB_GSPCA_SPCA561 is not set
+# CONFIG_USB_GSPCA_SPCA1528 is not set
+# CONFIG_USB_GSPCA_SQ905 is not set
+# CONFIG_USB_GSPCA_SQ905C is not set
+# CONFIG_USB_GSPCA_SQ930X is not set
+# CONFIG_USB_GSPCA_STK014 is not set
+# CONFIG_USB_GSPCA_STV0680 is not set
+# CONFIG_USB_GSPCA_SUNPLUS is not set
+# CONFIG_USB_GSPCA_T613 is not set
+# CONFIG_USB_GSPCA_TOPRO is not set
+# CONFIG_USB_GSPCA_TV8532 is not set
+# CONFIG_USB_GSPCA_VC032X is not set
+# CONFIG_USB_GSPCA_VICAM is not set
+# CONFIG_USB_GSPCA_XIRLINK_CIT is not set
+# CONFIG_USB_GSPCA_ZC3XX is not set
 # CONFIG_VIDEO_PVRUSB2 is not set
 # CONFIG_VIDEO_HDPVR is not set
 # CONFIG_VIDEO_EM28XX is not set
@@ -2798,7 +2845,7 @@ CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_AUDIO_OCMEM=y
 CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
-CONFIG_SND_SOC_APQ8074=y
+# CONFIG_SND_SOC_APQ8074 is not set
 # CONFIG_SND_FM_RADIO is not set
 # CONFIG_SND_FM_SWTICH is not set
 CONFIG_HIFI_SOUND=y
@@ -2816,7 +2863,7 @@ CONFIG_SND_SOC_MSM_STUB=y
 # CONFIG_SND_SOC_TPA2015D is not set
 # CONFIG_SND_SOC_CS35L32 is not set
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
-CONFIG_SND_SOC_ES325_SLIM=y
+# CONFIG_SND_SOC_ES325_SLIM is not set
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -2920,7 +2967,7 @@ CONFIG_USB_SUSPEND=y
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_DEBUG is not set
-CONFIG_USB_LGE_USB3_REDRIVER=y
+# CONFIG_USB_LGE_USB3_REDRIVER is not set
 # CONFIG_USB_DWC3_LGE_SINGLE_PSY is not set
 CONFIG_USB_MON=y
 # CONFIG_USB_WUSB_CBAF is not set
@@ -3073,7 +3120,7 @@ CONFIG_USB_G_LGE_ANDROID_AUTORUN=y
 CONFIG_USB_G_LGE_ANDROID_AUTORUN_LGE=y
 # CONFIG_USB_G_LGE_ANDROID_VZWLAN is not set
 CONFIG_USB_G_LGE_ANDROID_CDROM_MAC_SUPPORT=y
-CONFIG_USB_G_LGE_ANDROID_NCM=y
+# CONFIG_USB_G_LGE_ANDROID_NCM is not set
 CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
 # CONFIG_USB_DWC3_MSM_VZW_SUPPORT is not set
 # CONFIG_DWC3_MSM_CDP_SUPPORT is not set
@@ -3081,7 +3128,7 @@ CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
 CONFIG_USB_G_LGE_MULTIPLE_CONFIGURATION=y
 CONFIG_USB_G_LGE_MULTICONFIG_ATF_WA=y
 # CONFIG_USB_G_LGE_SERIALNO_REDIRECTION is not set
-CONFIG_USB_EMBEDDED_BATTERY_REBOOT=y
+# CONFIG_USB_EMBEDDED_BATTERY_REBOOT is not set
 
 #
 # OTG and related infrastructure
@@ -3096,6 +3143,7 @@ CONFIG_USB_MSM_OTG=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_PERF_PROFILING=y
+# CONFIG_MACH_MSM8974_EMMC_HW_RESET is not set
 # CONFIG_LGE_MMC_SD_USE_SDCC3 is not set
 CONFIG_LGE_MMC_BKOPS_ENABLE=y
 # CONFIG_LGE_MMC_RESET_IF_HANG is not set
@@ -3191,6 +3239,7 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 CONFIG_SWITCH_MAX1462X=y
+# CONFIG_SWITCH_MAX1462X_WA is not set
 # CONFIG_INPUT_MAX14688 is not set
 # CONFIG_LGE_HEADSET_MIC_NOISE_WA is not set
 CONFIG_LGE_HEADSET_INSERT_DELAY=y
@@ -3405,20 +3454,22 @@ CONFIG_MOBICORE_API=y
 #
 # LGE Broadcast Device Support
 #
+CONFIG_LGE_BROADCAST_ONESEG=y
 
 #
 # LGE Japanese Mobile Broadcast(ISDB-T 1seg/ISDB-Tmm 13seg) Device Support
 #
 # CONFIG_BIF is not set
 # CONFIG_SENSORS is not set
+CONFIG_LGE_BROADCAST_ONESEG_FC8150=y
 
 #
 # LGE Felica selection
 #
-# CONFIG_LGE_FELICA is not set
-# CONFIG_LGE_FELICA_NFC is not set
+CONFIG_LGE_FELICA=y
+CONFIG_LGE_FELICA_NFC=y
 # CONFIG_LGE_FELICA_ONLY is not set
-# CONFIG_LGE_FELICA_KDDI is not set
+CONFIG_LGE_FELICA_KDDI=y
 # CONFIG_LGE_FELICA_NFC_DCM is not set
 # CONFIG_LGE_FELICA_KDDI_Z is not set
 
