--- a/arch/arm/configs/cyanogenmod_lgl22_defconfig
+++ b/arch/arm/configs/cyanogenmod_lgl22_defconfig
@@ -169,6 +169,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -370,14 +371,14 @@ CONFIG_MACH_LGE=y
 CONFIG_MACH_MSM8974_G2=y
 # CONFIG_MACH_MSM8974_G2_KR is not set
 # CONFIG_MACH_MSM8974_G2_LGU is not set
-CONFIG_MACH_MSM8974_G2_ATT=y
+# CONFIG_MACH_MSM8974_G2_ATT is not set
 # CONFIG_MACH_MSM8974_G2_SKT is not set
 # CONFIG_MACH_MSM8974_G2_KT is not set
 # CONFIG_MACH_MSM8974_G2_VZW is not set
 # CONFIG_MACH_MSM8974_G2_SPR is not set
 # CONFIG_MACH_MSM8974_G2_TMO_US is not set
 # CONFIG_MACH_MSM8974_G2_DCM is not set
-# CONFIG_MACH_MSM8974_G2_KDDI is not set
+CONFIG_MACH_MSM8974_G2_KDDI=y
 # CONFIG_MACH_MSM8974_G2_OPEN_COM is not set
 # CONFIG_MACH_MSM8974_G2_OPT_AU is not set
 # CONFIG_MACH_MSM8974_G2_TEL_AU is not set
@@ -445,7 +446,7 @@ CONFIG_MACH_MSM8974_G2_ATT=y
 # CONFIG_MACH_MSM8974_G3_WIN is not set
 # CONFIG_MACH_MSM8974_DZNY_DCM is not set
 # CONFIG_LGE_SPECIFIC_PATCHES is not set
-CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-att"
+CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-kddi"
 # CONFIG_LGE_HANDLE_PANIC is not set
 CONFIG_LGE_BOOTLOADER_LOG=y
 # CONFIG_LGE_LCD_TUNING is not set
@@ -751,8 +752,8 @@ CONFIG_MEMORY_HOLE_CARVEOUT=y
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ENABLE_DMM is not set
 # CONFIG_DONT_MAP_HOLE_AFTER_MEMBANK0 is not set
-CONFIG_ENABLE_VMALLOC_SAVING=y
-# CONFIG_NO_VM_RECLAIM is not set
+# CONFIG_ENABLE_VMALLOC_SAVING is not set
+CONFIG_NO_VM_RECLAIM=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
@@ -870,8 +871,8 @@ CONFIG_XFRM_SUB_POLICY=y
 CONFIG_XFRM_MIGRATE=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_IPCOMP=y
-CONFIG_NET_KEY=y
-CONFIG_NET_KEY_MIGRATE=y
+# CONFIG_NET_KEY is not set
+# CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -894,9 +895,9 @@ CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_TUNNEL=y
-CONFIG_INET_XFRM_MODE_TRANSPORT=y
-CONFIG_INET_XFRM_MODE_TUNNEL=y
-CONFIG_INET_XFRM_MODE_BEET=y
+# CONFIG_INET_XFRM_MODE_TRANSPORT is not set
+# CONFIG_INET_XFRM_MODE_TUNNEL is not set
+# CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
@@ -967,7 +968,7 @@ CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 # CONFIG_NF_CONNTRACK_SNMP is not set
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_NF_CONNTRACK_SANE=y
-# CONFIG_NF_CONNTRACK_SIP is not set
+CONFIG_NF_CONNTRACK_SIP=y
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NF_CT_NETLINK=y
 # CONFIG_NF_CT_NETLINK_TIMEOUT is not set
@@ -989,7 +990,7 @@ CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 # CONFIG_NETFILTER_XT_TARGET_CT is not set
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
-# CONFIG_NETFILTER_XT_TARGET_HL is not set
+CONFIG_NETFILTER_XT_TARGET_HL=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 # CONFIG_NETFILTER_XT_TARGET_LED is not set
 CONFIG_NETFILTER_XT_TARGET_LOG=y
@@ -1000,7 +1001,7 @@ CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 CONFIG_NETFILTER_XT_TARGET_TEE=y
 CONFIG_NETFILTER_XT_TARGET_TPROXY=y
-CONFIG_NETFILTER_XT_TARGET_TRACE=y
+# CONFIG_NETFILTER_XT_TARGET_TRACE is not set
 # CONFIG_NETFILTER_XT_TARGET_SECMARK is not set
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
@@ -1033,7 +1034,7 @@ CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
 # CONFIG_NETFILTER_XT_MATCH_NFACCT is not set
 # CONFIG_NETFILTER_XT_MATCH_OSF is not set
 # CONFIG_NETFILTER_XT_MATCH_OWNER is not set
-CONFIG_NETFILTER_XT_MATCH_POLICY=y
+# CONFIG_NETFILTER_XT_MATCH_POLICY is not set
 # CONFIG_NETFILTER_XT_MATCH_PHYSDEV is not set
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
@@ -1091,11 +1092,11 @@ CONFIG_NF_NAT_TFTP=y
 CONFIG_NF_NAT_AMANDA=y
 CONFIG_NF_NAT_PPTP=y
 CONFIG_NF_NAT_H323=y
-# CONFIG_NF_NAT_SIP is not set
+CONFIG_NF_NAT_SIP=y
 CONFIG_IP_NF_MANGLE=y
-# CONFIG_IP_NF_TARGET_CLUSTERIP is not set
-# CONFIG_IP_NF_TARGET_ECN is not set
-# CONFIG_IP_NF_TARGET_TTL is not set
+CONFIG_IP_NF_TARGET_CLUSTERIP=y
+CONFIG_IP_NF_TARGET_ECN=y
+CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_IP_NF_RAW=y
 # CONFIG_IP_NF_SECURITY is not set
 CONFIG_IP_NF_ARPTABLES=y
@@ -1107,18 +1108,18 @@ CONFIG_IP_NF_ARP_MANGLE=y
 #
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_CONNTRACK_IPV6=y
-# CONFIG_IP6_NF_QUEUE is not set
+CONFIG_IP6_NF_QUEUE=y
 CONFIG_IP6_NF_IPTABLES=y
-# CONFIG_IP6_NF_MATCH_AH is not set
-# CONFIG_IP6_NF_MATCH_EUI64 is not set
-# CONFIG_IP6_NF_MATCH_FRAG is not set
-# CONFIG_IP6_NF_MATCH_OPTS is not set
-# CONFIG_IP6_NF_MATCH_HL is not set
-# CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
-# CONFIG_IP6_NF_MATCH_MH is not set
-# CONFIG_IP6_NF_MATCH_RPFILTER is not set
-# CONFIG_IP6_NF_MATCH_RT is not set
-# CONFIG_IP6_NF_TARGET_HL is not set
+CONFIG_IP6_NF_MATCH_AH=y
+CONFIG_IP6_NF_MATCH_EUI64=y
+CONFIG_IP6_NF_MATCH_FRAG=y
+CONFIG_IP6_NF_MATCH_OPTS=y
+CONFIG_IP6_NF_MATCH_HL=y
+CONFIG_IP6_NF_MATCH_IPV6HEADER=y
+CONFIG_IP6_NF_MATCH_MH=y
+CONFIG_IP6_NF_MATCH_RPFILTER=y
+CONFIG_IP6_NF_MATCH_RT=y
+CONFIG_IP6_NF_TARGET_HL=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
@@ -1322,9 +1323,10 @@ CONFIG_LGE_NFC_USE_PMIC=y
 # CONFIG_LGE_NFC_HW_NV_AP3X is not set
 # CONFIG_NFC_PN533 is not set
 CONFIG_NFC_QNCI=y
-# CONFIG_LGE_NFC_SONY is not set
+CONFIG_LGE_NFC_SONY=y
+CONFIG_LGE_NFC_SONY_KDDI=y
 # CONFIG_CXD2235AGG_GJ_KDDI is not set
-CONFIG_NFC_BCM2079X=y
+# CONFIG_NFC_BCM2079X is not set
 # CONFIG_NFC_BCM43341 is not set
 
 #
@@ -1340,8 +1342,7 @@ CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_EXTRA_FIRMWARE="audience-es325-fw.aud"
-CONFIG_EXTRA_FIRMWARE_DIR="firmware"
+CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
@@ -1450,8 +1451,8 @@ CONFIG_TI_DRV2667=y
 CONFIG_LGE_IRRC=y
 CONFIG_EARJACK_DEBUGGER=y
 CONFIG_BU52031NVX=y
-# CONFIG_BU52031NVX_CARKIT is not set
-# CONFIG_LGE_IRDA_KDDI is not set
+CONFIG_BU52031NVX_CARKIT=y
+CONFIG_LGE_IRDA_KDDI=y
 CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
@@ -1906,7 +1907,7 @@ CONFIG_DIAG_OVER_USB=y
 # HSIC/SMUX support for DIAG
 #
 CONFIG_LGE_DIAG_USB_ACCESS_LOCK=y
-# CONFIG_LGE_DIAG_ENABLE_SYSFS is not set
+CONFIG_LGE_DIAG_ENABLE_SYSFS=y
 
 #
 # LGE DM APP Support
@@ -2080,12 +2081,12 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MSM8X60 is not set
 # CONFIG_SMB137B_CHARGER is not set
 # CONFIG_SMB137C_CHARGER is not set
-CONFIG_SMB349_CHARGER=y
+# CONFIG_SMB349_CHARGER is not set
 # CONFIG_SMB350_CHARGER is not set
 # CONFIG_BATTERY_BQ27520 is not set
 # CONFIG_SMB358_CHARGER is not set
 # CONFIG_BATTERY_BQ27541 is not set
-CONFIG_BATTERY_BQ28400=y
+# CONFIG_BATTERY_BQ28400 is not set
 # CONFIG_QPNP_CHARGER is not set
 # CONFIG_LTC4088_CHARGER is not set
 CONFIG_BATTERY_BCL=y
@@ -2112,7 +2113,7 @@ CONFIG_LGE_CURRENTNOW=y
 # CONFIG_CHARGER_UNIFIED_WLC_ALIGNMENT_BQ5102X is not set
 # CONFIG_LGE_PM_LLK_MODE is not set
 # CONFIG_LGE_SMART_CHARGING is not set
-CONFIG_LGE_G2_EMBEDDED_BATT=y
+# CONFIG_LGE_G2_EMBEDDED_BATT is not set
 # CONFIG_VZW_LLK is not set
 CONFIG_LGE_PM_BATTERY_BATT_ADC_G2_BASE=y
 CONFIG_LGE_PM_CHARGING_TEMP_SCENARIO_V1_7=y
@@ -2367,7 +2368,7 @@ CONFIG_IR_LIRC_CODEC=y
 CONFIG_MSMB_CAMERA=y
 # CONFIG_MSMB_CAMERA_DEBUG is not set
 CONFIG_MSM_CAMERA_SENSOR=y
-CONFIG_LG_OIS=y
+# CONFIG_LG_OIS is not set
 # CONFIG_LG_PROXY is not set
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
@@ -2797,7 +2798,7 @@ CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
 CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_AUDIO_OCMEM=y
 CONFIG_SND_SOC_MSM8974=y
-CONFIG_SND_SOC_APQ8074=y
+# CONFIG_SND_SOC_APQ8074 is not set
 # CONFIG_SND_FM_RADIO is not set
 # CONFIG_SND_FM_SWTICH is not set
 CONFIG_HIFI_SOUND=y
@@ -2815,7 +2816,7 @@ CONFIG_SND_SOC_MSM_STUB=y
 # CONFIG_SND_SOC_TPA2015D is not set
 # CONFIG_SND_SOC_CS35L32 is not set
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
-CONFIG_SND_SOC_ES325_SLIM=y
+# CONFIG_SND_SOC_ES325_SLIM is not set
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -2920,7 +2921,7 @@ CONFIG_USB_SUSPEND=y
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_DEBUG is not set
-CONFIG_USB_LGE_USB3_REDRIVER=y
+# CONFIG_USB_LGE_USB3_REDRIVER is not set
 # CONFIG_USB_DWC3_LGE_SINGLE_PSY is not set
 CONFIG_USB_MON=y
 # CONFIG_USB_WUSB_CBAF is not set
@@ -3073,7 +3074,7 @@ CONFIG_USB_G_LGE_ANDROID_AUTORUN=y
 CONFIG_USB_G_LGE_ANDROID_AUTORUN_LGE=y
 # CONFIG_USB_G_LGE_ANDROID_VZWLAN is not set
 CONFIG_USB_G_LGE_ANDROID_CDROM_MAC_SUPPORT=y
-CONFIG_USB_G_LGE_ANDROID_NCM=y
+# CONFIG_USB_G_LGE_ANDROID_NCM is not set
 CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
 # CONFIG_USB_DWC3_MSM_VZW_SUPPORT is not set
 # CONFIG_DWC3_MSM_CDP_SUPPORT is not set
@@ -3081,7 +3082,7 @@ CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
 CONFIG_USB_G_LGE_MULTIPLE_CONFIGURATION=y
 CONFIG_USB_G_LGE_MULTICONFIG_ATF_WA=y
 # CONFIG_USB_G_LGE_SERIALNO_REDIRECTION is not set
-CONFIG_USB_EMBEDDED_BATTERY_REBOOT=y
+# CONFIG_USB_EMBEDDED_BATTERY_REBOOT is not set
 
 #
 # OTG and related infrastructure
@@ -3096,6 +3097,7 @@ CONFIG_USB_MSM_OTG=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_PERF_PROFILING=y
+# CONFIG_MACH_MSM8974_EMMC_HW_RESET is not set
 # CONFIG_LGE_MMC_SD_USE_SDCC3 is not set
 CONFIG_LGE_MMC_BKOPS_ENABLE=y
 # CONFIG_LGE_MMC_RESET_IF_HANG is not set
@@ -3191,6 +3193,7 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 CONFIG_SWITCH_MAX1462X=y
+# CONFIG_SWITCH_MAX1462X_WA is not set
 # CONFIG_INPUT_MAX14688 is not set
 # CONFIG_LGE_HEADSET_MIC_NOISE_WA is not set
 CONFIG_LGE_HEADSET_INSERT_DELAY=y
@@ -3404,20 +3407,22 @@ CONFIG_MOBICORE_API=y
 #
 # LGE Broadcast Device Support
 #
+CONFIG_LGE_BROADCAST_ONESEG=y
 
 #
 # LGE Japanese Mobile Broadcast(ISDB-T 1seg/ISDB-Tmm 13seg) Device Support
 #
 # CONFIG_BIF is not set
 # CONFIG_SENSORS is not set
+CONFIG_LGE_BROADCAST_ONESEG_FC8150=y
 
 #
 # LGE Felica selection
 #
-# CONFIG_LGE_FELICA is not set
-# CONFIG_LGE_FELICA_NFC is not set
+CONFIG_LGE_FELICA=y
+CONFIG_LGE_FELICA_NFC=y
 # CONFIG_LGE_FELICA_ONLY is not set
-# CONFIG_LGE_FELICA_KDDI is not set
+CONFIG_LGE_FELICA_KDDI=y
 # CONFIG_LGE_FELICA_NFC_DCM is not set
 # CONFIG_LGE_FELICA_KDDI_Z is not set
 
