--- a/arch/arm/configs/cyanogenmod_ls980_defconfig
+++ b/arch/arm/configs/cyanogenmod_ls980_defconfig
@@ -111,6 +111,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
+# CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
