adf: enable in config

--- a/arch/arm/configs/cyanogenmod_d801_defconfig
+++ b/arch/arm/configs/cyanogenmod_d801_defconfig
@@ -2746,6 +2746,14 @@ CONFIG_BACKLIGHT_LM3630=y
 CONFIG_MACH_LGE_BACKLIGHT_SUPPORT=y
 
 #
+# ADF (Atomic Display Framework)
+#
+CONFIG_DISPLAY_CORE=y
+CONFIG_ADF=y
+CONFIG_ADF_FBDEV=y
+CONFIG_ADF_MEMBLOCK=y
+
+#
 # Console display driver support
 #
 CONFIG_DUMMY_CONSOLE=y
