config: Disable drm Doesn't work (yet?) - no point in having it.

--- a/arch/arm/configs/cyanogenmod_lgl22_defconfig
+++ b/arch/arm/configs/cyanogenmod_lgl22_defconfig
@@ -2614,13 +2614,7 @@ CONFIG_RADIO_IRIS_TRANSPORT=y
 #
 # Graphics support
 #
-CONFIG_DRM=y
-CONFIG_DRM_UDL=y
-# CONFIG_DRM_TILCDC is not set
-# CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
-# CONFIG_DRM_I2C_CH7006 is not set
-# CONFIG_DRM_I2C_SIL164 is not set
-CONFIG_MSM_KGSL_DRM=y
+# CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
