--- a/arch/arm/configs/cyanogenmod_d803_defconfig
+++ b/arch/arm/configs/cyanogenmod_d803_defconfig
@@ -713,7 +713,7 @@ CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_NFC_QNCI=y
-CONFIG_CRYPTO_DEV_KFIPS=y
+# CONFIG_CRYPTO_DEV_KFIPS is not set
 CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
@@ -732,9 +732,6 @@ CONFIG_SYSFS=y
 CONFIG_EXT4_FS_XATTR=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_AUDITSYSCALL=y
-
-#APPLY FIPS MODULE
-CONFIG_CRYPTO_DEV_KFIPS=y
 
 # VMware_S
 # CONFIG_LGE_B2B_VMWARE is not set
