--- a/arch/arm/configs/cyanogenmod_lgl22_defconfig
+++ b/arch/arm/configs/cyanogenmod_lgl22_defconfig
@@ -796,7 +796,7 @@ CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_NFC_QNCI=y
-CONFIG_CRYPTO_DEV_KFIPS=y
+# CONFIG_CRYPTO_DEV_KFIPS is not set
 CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
@@ -816,8 +816,6 @@ CONFIG_EXT4_FS_XATTR=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_AUDITSYSCALL=y
 
-#APPLY FIPS MODULE
-CONFIG_CRYPTO_DEV_KFIPS=y
 #LGE_CHANGE_S [DDM]
 CONFIG_LGE_DDM_TTY=y
 #LGE_CHANGE_E [DDM]
