--- a/arch/arm/configs/cyanogenmod_ls980_defconfig
+++ b/arch/arm/configs/cyanogenmod_ls980_defconfig
@@ -717,8 +717,7 @@ CONFIG_EXT4_FS_XATTR=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_AUDITSYSCALL=y
 
-#APPLY FIPS MODULE
-CONFIG_CRYPTO_DEV_KFIPS=y
+# CONFIG_CRYPTO_DEV_KFIPS is not set
 
 # VMware_S
 # CONFIG_LGE_B2B_VMWARE is not set
