--- a/arch/arm/configs/cyanogenmod_f320_defconfig
+++ b/arch/arm/configs/cyanogenmod_f320_defconfig
@@ -685,6 +685,7 @@ CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_NFC_QNCI=y
+# CONFIG_CRYPTO_DEV_KFIPS is not set
 CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
