--- a/arch/arm/configs/cyanogenmod_vs980_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs980_defconfig
@@ -667,8 +667,7 @@ CONFIG_NFC_QNCI=y
 CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
-#APPLY FIPS MODULE
-CONFIG_CRYPTO_DEV_KFIPS=y
+# CONFIG_CRYPTO_DEV_KFIPS is not set
 CONFIG_CRYPTO_SEQIV=y
 CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_CTR=y
